Fixed irregular margins and text alignment

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ html, body {
     height: 100%;
     font-family: poppins, Georgia, Times, serif;
     scroll-padding-top: 68px;
+    width: 100%;
 }
 
 .header {
@@ -158,6 +159,7 @@ html, body {
 .container {
     display: flex; /** creates a flex container, contains main and footer **/
     flex-direction: column;
+    background-color:  #2c2f33;
 }
 
 .imgcontainer {
@@ -172,20 +174,33 @@ body {
     padding:0px;
     color: white;
     background-color:#EFF7FF;
+    width: 100%;
+    text-align: justify;
 }
 
 main {
     flex: 1 0 auto; /** sticky footer **/
-    width: 100%;
-    background-color: #2c2f33;
     margin: auto;
     padding-top: 20px;
+    width: 85%;
+    max-width: 1000px;
 }
 
 .subheading {
     font-size: 2em;
     text-align: center;
-    margin-top: 50px;
+    margin: 50px 0px 20px 0px;
+}
+
+.minisubheading {
+  font-size: 1.2em;
+  text-align: center;
+  margin: 30px 0px 10px 0px;
+}
+
+.info {
+  font-size: 1em;
+  text-align: center;
 }
 
 section {
@@ -193,11 +208,16 @@ section {
 }
 
 p {
-    text-align: left;
     margin: auto;
+    margin-top: 20px;
     margin-bottom: 20px;
     font-size: 0.8em;
     font-family: poppinslight;
+}
+
+.project {
+  text-align: center;
+  font-size: 1.2em
 }
 
 footer {
@@ -220,15 +240,14 @@ footer {
   border: 4px solid #6699ff; 
 }
 
-.esportimage,
-p {
-    width: 85%;
-    max-width: 720px;
-    border-radius: 10px;    
+.esportimage {
+    border-radius: 10px;
+    width: 85%;   
 }
 
 li a img,
-li a i {
+li a i,
+div a i {
     flex: 1 1 auto;
     max-width: 100px;
     border-radius: 50%;
@@ -326,5 +345,10 @@ li {
     li a img,
     li a i {
         max-width: 150px;
-    } 
+    }
+    
+    .info {
+      font-size: 1.4em;
+      text-align: center;
+    }
   }
